@@ -693,11 +693,19 @@ rewriting the runtime library in question from specs...
 <answer>
 
 <para>First, you need to make sure you have the necessary build tools
-installed; you at least need <literal>gcc</literal>, <literal>make</literal>, 
-<literal>perl</literal>, and <literal>cocom</literal>. If you want to run 
-the tests, <literal>dejagnu</literal> is also required.
+installed; you at least need <literal>gcc-g++</literal>, <literal>make</literal>,
+<literal>perl</literal>, <literal>cocom</literal>, <literal>gettext</literal>,
+and <literal>zlib-devel</literal>.
+Building for 32-bit Cygwin also requires <literal>libiconv</literal>,
+<literal>mingw64-i686-gcc-g++</literal>, <literal>mingw64-i686-zlib</literal>,
+and <literal>mingw64-x86_64-gcc-core</literal>.
+Building for 64-bit Cygwin also requires <literal>libiconv-devel</literal>,
+<literal>mingw64-x86_64-gcc-g++</literal>, and
+<literal>mingw64-x86_64-zlib</literal>.
+If you want to run the tests, <literal>dejagnu</literal> is also required.
 Normally, building ignores any errors in building the documentation,
-which requires the <literal>dblatex</literal>, <literal>docbook-xml45</literal>, <literal>docbook-xsl</literal>, and
+which requires the <literal>dblatex</literal>,
+<literal>docbook-xml45</literal>, <literal>docbook-xsl</literal>, and
 <literal>xmlto</literal> packages.  For more information on building the
 documentation, see the README included in the <literal>cygwin-doc</literal> package.
 </para>
