@@ -1,3 +1,7 @@
+2014-01-07  Mark Geisert  <mark@maxrnd.com>
+
+	* faq-programming.xml: Update packages needed to build Cygwin.
+
 2013-12-07  Corinna Vinschen  <corinna@vinschen.de>
 
 	* new-features.xml (ov-new1.7.26): Add new section.
